--- a/text/praca/literatura.bib
+++ b/text/praca/literatura.bib
@@ -145,3 +145,29 @@ doi={10.1038/nbt.1495},
 url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2683588/}
 }
 
+@misc{DataRondelez,
+ author={Rondelez, Yannick},
+ year={2018},
+ note={Osobná komunikácia}
+}
+
+@inproceedings{ROC,
+  title={Basic principles of {ROC} analysis},
+  author={Metz, Charles E},
+  booktitle={Seminars in nuclear medicine},
+  volume={8},
+  number={4},
+  pages={283--298},
+  year={1978},
+  organization={Elsevier}
+}
+
+@article{Laver2015,
+  title={Assessing the performance of the {Oxford Nanopore Technologies MinION}},
+  author={Laver, Thomas and others},
+  journal={Biomolecular detection and quantification},
+  volume={3},
+  pages={1--8},
+  year={2015},
+  publisher={Elsevier}
+}
